Fixed title spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,8 @@ select {
 }
 
 .title {
-    width: 9rem;
-    height: 5rem;
+    width: 12rem;
+    height: 6rem;
     align-items: center;
     text-align: center;
     padding: 0.5rem 2rem;
